--- a/src/components/roadmap/ProblemTable.astro
+++ b/src/components/roadmap/ProblemTable.astro
@@ -5,7 +5,7 @@ interface Props {
 
 const { problems } = Astro.props
 
-const difficultyColor = {
+const difficultyColor: Record<string, string> = {
   Easy: 'text-green-600 bg-green-500/10 border-green-500/20 dark:text-green-400 dark:bg-green-500/10 dark:border-green-400/20',
   Medium:
     'text-yellow-600 bg-yellow-500/10 border-yellow-500/20 dark:text-yellow-400 dark:bg-yellow-500/10 dark:border-yellow-400/20',
